# evm_terminal

./: .gitignore  README.md  build.py  build_linux.sh  local_build.sh  main.py  pytest.ini  requirements.txt
.github/workflows/: release.yaml
bot/: bot.py  cache.py
bot/core/: abis.py  bridge.py  config.py  db_manager.py  integrities.py
bot/inner_api/: __init__.py  base.py  router.py  schemas.py
bot/inner_api/endpoints/: config.py  pools.py  system.py  trading.py  wallets.py
bot/inner_api/middleware/: validation.py
bot/services/: account_manager.py  bot_service.py  market_data_service.py
contract/: README.md  TaxRouter.md  TaxRouter.sol
media/: icon.icns
networks/: README.md  bsc.json  bsc_testnet.json  networks.md
rust_module/: Cargo.toml  dexbot_core.pyi  pyproject.toml
rust_module/src/: config.rs  crypto.rs  engine.rs  execution.rs  lib.rs  monitor.rs  pnl.rs  state.rs
rust_module/src/bridge/: mod.rs  models.rs  pack.rs  ring.rs  transport.rs
rust_module/src/state/: app.rs  mod.rs  monitor.rs  network.rs  runtime.rs
tests/: conftest.py  test_autofuel.py  test_main_flow.py  test_market_data.py  test_pnl_logic.py  test_security_db.py  test_system_reset.py  test_trading.py
tui/: README.md  app.css  app.py  help.py  lang.py  tui.md
utils/: aiologger.py  security.py
