[package]
name = "dexbot_core"
version = "0.1.2"
edition = "2021"

[lib]
name = "dexbot_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py312"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.32.0", features = ["full"] }
ethers = { version = "2.0.10", features = ["ws", "rustls", "abigen"] }
once_cell = "1.18.0"
hex = "0.4.3"
futures = "0.3.31"
tokio-stream = "0.1.17"
ed25519-dalek = { version = "2.0", features = ["pem", "rand_core"] }
pkcs8 = "0.10" 
url = "2.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
chrono = "0.4"

# --- JSON Parsing ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Encryption ---
aes-gcm = { version = "0.10.3", features = ["std"] }
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
typenum = "1.17.0"

# --- Bridge ---
crossbeam-channel = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debugapi"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true